--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier": "^3.4.2",
     "tailwindcss": "^4.0.0",
     "vite": "^6.0.11",
-    "vitest": "^3.0.2"
+    "vitest": "^3.0.2",
+    "wrangler": "^3.108.0"
   }
 }
